Temp storage and load sensor data by interval.

--- a/apps/ui/web/templates/page/iot.html.eex
+++ b/apps/ui/web/templates/page/iot.html.eex
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-	<div class="row">
+	<div id="iot_sensors" class="row">
 		<div class="col-lg-3 col-md-6 col-sm-6">
 			<div class="card card-stats">
 				<div class="card-header" data-background-color="orange">
